// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmStatus vm /> renders correctly 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-off kubevirt-status__icon"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly 0 (VM_STATUS_OFF) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-off kubevirt-status__icon"
  />,
  "Off",
]
`;

exports[`<VmStatus vm pod /> renders correctly 1 (VM_STATUS_RUNNING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-on-running kubevirt-status__icon"
  />,
  "Running",
]
`;

exports[`<VmStatus vm pod /> renders correctly 2 (VM_STATUS_STARTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 3 (VM_STATUS_STARTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />,
  "Starting",
]
`;

exports[`<VmStatus vm pod /> renders correctly 4 (VM_STATUS_STARTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 5 (VM_STATUS_POD_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 6 (VM_STATUS_VMI_WAITING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 7 (VM_STATUS_VMI_WAITING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 8 (VM_STATUS_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 9 (VM_STATUS_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    VM Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 10 (VM_STATUS_IMPORT_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Importer Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 11 (VM_STATUS_POD_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Pod Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 12 (VM_STATUS_MIGRATING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-migration kubevirt-status__icon"
  />,
  "Migrating",
]
`;

exports[`<VmStatus vm pod /> renders correctly 13 (VM_STATUS_RUNNING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-on-running kubevirt-status__icon"
  />,
  "Running",
]
`;

exports[`<VmStatus vm pod /> renders correctly 14 (VM_STATUS_IMPORTING) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-import kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/importer-datavolume-my-vm-x9c99/events"
  >
    Importing
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 15 (VM_STATUS_IMPORT_ERROR) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Importer Error
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 16 (VM_STATUS_CONVERSION_IN_PROGRESS) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-import kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/kubevirt-v2v-conversion-15ac9/events"
  >
    V2V Conversion In Progress
  </a>,
]
`;

exports[`<VmStatus vm pod /> renders correctly 17 (VM_STATUS_CONVERSION_FAILED) 1`] = `
Array [
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />,
  <a
    href="/k8s/ns/my-namespace/pods/kubevirt-v2v-conversion-15ac5/events"
  >
    V2V Conversion Error
  </a>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly 0 (VM_STATUS_OFF) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-off kubevirt-status__icon"
  />
  Off
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 1 (VM_STATUS_RUNNING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-on-running kubevirt-status__icon"
  />
  Running
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 2 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 3 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  Starting
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 4 (VM_STATUS_STARTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Starting
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 5 (VM_STATUS_POD_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Pod Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 6 (VM_STATUS_VMI_WAITING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 7 (VM_STATUS_VMI_WAITING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-pending kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    Pending
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 8 (VM_STATUS_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    VM Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 9 (VM_STATUS_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/virtualmachines/my-vm/events"
  >
    VM Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 10 (VM_STATUS_IMPORT_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Importer Error (testdisk)
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 11 (VM_STATUS_POD_ERROR) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
  >
    Pod Error
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 12 (VM_STATUS_MIGRATING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-migration kubevirt-status__icon"
  />
  Migrating
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 13 (VM_STATUS_RUNNING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-on-running kubevirt-status__icon"
  />
  Running
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 14 (VM_STATUS_IMPORTING) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-import kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/importer-datavolume-my-vm-x9c99/events"
  >
    Importing (testdisk)
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 15 (VM_STATUS_IMPORT_ERROR) 1`] = `
Array [
  <div>
    <span
      aria-hidden="true"
      class="pficon pficon-import kubevirt-status__icon"
    />
    <a
      href="/k8s/ns/my-namespace/pods/importer-datavolume-my-vm-x9c99/events"
    >
      Importing (testdisk)
    </a>
  </div>,
  <div>
    <span
      aria-hidden="true"
      class="pficon pficon-error-circle-o kubevirt-status__icon"
    />
    <a
      href="/k8s/ns/my-namespace/pods/virt-launcher-my-vm-x9c99/events"
    >
      Importer Error (testdisk)
    </a>
  </div>,
]
`;

exports[`<VmStatuses vm pod /> renders correctly 16 (VM_STATUS_CONVERSION_IN_PROGRESS) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-import kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/kubevirt-v2v-conversion-15ac9/events"
  >
    V2V Conversion In Progress
  </a>
</div>
`;

exports[`<VmStatuses vm pod /> renders correctly 17 (VM_STATUS_CONVERSION_FAILED) 1`] = `
<div>
  <span
    aria-hidden="true"
    class="pficon pficon-error-circle-o kubevirt-status__icon"
  />
  <a
    href="/k8s/ns/my-namespace/pods/kubevirt-v2v-conversion-15ac5/events"
  >
    V2V Conversion Error
  </a>
</div>
`;
